# codex-relayouter

./: .gitignore  README.md  _extract_classes.ps1  codex-relayouter.slnx
_tauri-check/: package-lock.json  package.json
_tauri-check/src-tauri/: Cargo.toml  tauri.conf.json
codex-bridge/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  codex-bridge.csproj
codex-bridge-server/: Program.cs
codex-bridge-server.Tests/: CodexSessionStoreTests.cs  DevicePairingAndAuthTests.cs  TurnPlanTests.cs  codex-bridge-server.Tests.csproj
codex-relayouter/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  WindowSizing.cs  app.manifest  build_output.txt  codex-relayouter.csproj
codex-relayouter-common/: codex-relayouter-common.csproj
codex-relayouter-common.Tests/: LanAddressSelectorTests.cs  LogTailReaderTests.cs  codex-relayouter-common.Tests.csproj
codex-relayouter-server/: Program.cs  WeatherForecast.cs  appsettings.json  codex-relayouter-server.csproj  codex-relayouter-server.http
codex-relayouter-server.Tests/: CodexSessionStoreTests.cs  DiffStatsCalculatorTests.cs  ReasoningSummaryTrackerTests.cs  TranslationFeatureTests.cs  TurnPlanTests.cs
codex-relayouter.Tests/: TraceExpansionTests.cs  codex-relayouter.Tests.csproj
helloagents/: CHANGELOG.md
tauri-check-v1/: package-lock.json  package.json
tauri-client/: README.md  _tmp_methods.txt  package-lock.json  package.json
tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/src/: lib.rs  main.rs
(+156 files in other folders)
