[package]
name = "tauri-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
open = "5.3.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "2.2.5", features = [] }
tokio = { version = "1.43.0", features = ["net", "process", "sync", "time"] }
tokio-tungstenite = "0.24.0"
toml = "0.8.19"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["v4"] }
